--- a/OfficeBound.Infrastructure/OfficeBound.Infrastructure.csproj
+++ b/OfficeBound.Infrastructure/OfficeBound.Infrastructure.csproj
@@ -13,6 +13,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,6 +22,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\OfficeBound.Domain\OfficeBound.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
