--- a/OfficeBound.Presentation/OfficeBound.Presentation.csproj
+++ b/OfficeBound.Presentation/OfficeBound.Presentation.csproj
@@ -7,8 +7,25 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\OfficeBound.Application\OfficeBound.Application.csproj" />
+      <ProjectReference Include="..\OfficeBound.Infrastructure\OfficeBound.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Client\" />
+      <Folder Include="Client\officebound\public\" />
+      <Folder Include="Client\officebound\src\assets\images\" />
     </ItemGroup>
 
 </Project>
