--- a/OfficeBound.Presentation/appsettings.json
+++ b/OfficeBound.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnectionString": "Data Source=.\\SQLSERVER2017;Initial Catalog=OfficeBound;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
