--- a/OfficeBound.Presentation/Client/officebound/package.json
+++ b/OfficeBound.Presentation/Client/officebound/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^7.9.4",
-    "semantic-ui-css": "2.5.0",
-    "semantic-ui-react": "2.1.5"
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
