--- a/OfficeBound.Presentation/OfficeBound.Presentation.csproj
+++ b/OfficeBound.Presentation/OfficeBound.Presentation.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Hangfire.Core" Version="1.8.17" />
+        <PackageReference Include="Hangfire.AspNetCore" Version="1.8.17" />
+        <PackageReference Include="Hangfire.SqlServer" Version="1.8.17" />
         <PackageReference Include="MediatR" Version="12.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.21"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
