add translation and number of spaces in configuration

--- a/OfficeBound.Infrastructure/OfficeBound.Infrastructure.csproj
+++ b/OfficeBound.Infrastructure/OfficeBound.Infrastructure.csproj
@@ -21,4 +21,8 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DevScripts\" />
+    </ItemGroup>
+
 </Project>
