--- a/OfficeBound.Presentation/appsettings.json
+++ b/OfficeBound.Presentation/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DbConnectionString": "Data Source=.\\SQLSERVER2017;Initial Catalog=OfficeBound;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "HangfireConnectionString": "Data Source=.\\SQLSERVER2017;Initial Catalog=OfficeBound_Hangfire;Integrated Security=True;Connect Timeout=60;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "OfficeResources": {
+    "NumberOfConferenceRooms": 5,
+    "NumberOfDesks": 50,
+    "NumberOfParkingSpaces": 30
   }
 }
