--- a/OfficeBound.Presentation/Client/officebound/package.json
+++ b/OfficeBound.Presentation/Client/officebound/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "axios": "^1.12.2",
+    "i18next": "^25.6.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^16.2.4",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
